<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="hrhera.task.forecast.features.home.HomeViewModel" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:bind="http://schemas.android.com/tools"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/warning_locale_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/ornege"
            android:gravity="center"
            android:paddingVertical="6dp"
            android:text="@string/warning_locale_data"
            android:textColor="@color/white"
            android:visibility="@{viewModel.localDataWarningVisibility?View.VISIBLE:View.GONE}"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cityContainer"
            style="@style/dropdownMenuStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            android:background="@android:color/transparent"
            android:elevation="1dp"
            android:hint="@string/hint_city"
            app:boxStrokeWidth="0.7dp"
            app:hintTextColor="@color/text_hint"
            app:layout_constraintTop_toBottomOf="@id/warning_locale_data"
            bind:showErrorWithAnimation="@{viewModel.citiesErrorMessage}">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/cities"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="12sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:visibility="@{viewModel.errorMessageVisibility?View.GONE:View.VISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cityContainer">

            <androidx.viewpager2.widget.ViewPager2
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adapter="@{viewModel.adapter}" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/error_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:paddingVertical="6dp"
            android:text="@{viewModel.errorMessage}"
            android:textColor="@color/red"
            android:visibility="@{viewModel.errorMessageVisibility?View.VISIBLE:View.GONE}"
            app:layout_constraintTop_toBottomOf="@id/cityContainer"
            tools:text="some error message"
            tools:visibility="visible" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/ornege"
            android:minWidth="200dp"
            android:onClick="@{()->viewModel.retry()}"
            android:text="@string/retry"
            android:textColor="@color/white"
            android:visibility="@{viewModel.errorMessageVisibility?View.VISIBLE:View.GONE}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/error_message"
            app:rippleColor="@color/white" />


        <ProgressBar
            android:id="@+id/forecast_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/ornege"
            android:visibility="@{viewModel.loadingForecast?View.VISIBLE:View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/cities_loading"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:elevation="1dp"
            android:indeterminateTint="@color/ornege"
            android:padding="4dp"
            android:visibility="@{viewModel.citiesLoadingVisibility?View.VISIBLE:View.GONE}"
            app:layout_constraintBottom_toBottomOf="@id/cityContainer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/cityContainer" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>